# PyPhishtankLookup

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: mypy.yml  release.yml
docs/source/: api_reference.rst  conf.py  index.rst
examples/: capture_with_lookyloo.py
pyphishtanklookup/: __init__.py  api.py
tests/: test_web.py
