[project]
name = "pyphishtanklookup"
version = "1.5.2"
description = "Python CLI and module for PhishtankLookup"
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python=">=3.10,<3.15"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.33.0)"
]

[project.urls]
repository = "https://github.com/lookyloo/PyPhishtankLookup"
documentation = "https://pyphishtanklookup.readthedocs.io/"
issues = "https://github.com/lookyloo/PyPhishtankLookup/issues"

[tools.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
phishtank-lookup = 'pyphishtanklookup:main'

[project.optional-dependencies]

docs = [
    "Sphinx (>=9.1.0) ; python_version >= \"3.12\"",
]

lookyloo_example = [
    "pylookyloo (>=1.37.4)"
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-requests = "^2.33.0.20260327"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
